@@ -1,7 +1,7 @@
 #! /bin/sh -e
 
 # Generate grub.cfg by inspecting /boot contents.
-# Copyright (C) 2006,2007,2008,2009 Free Software Foundation, Inc.
+# Copyright (C) 2006,2007,2008,2009,2010 Free Software Foundation, Inc.
 #
 # GRUB is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -274,7 +274,8 @@ export GRUB_DEFAULT \
   GRUB_GFXPAYLOAD_LINUX \
   GRUB_DISABLE_OS_PROBER \
   GRUB_INIT_TUNE \
-  GRUB_SAVEDEFAULT
+  GRUB_SAVEDEFAULT \
+  GRUB_BADRAM
 
 if test "x${grub_cfg}" != "x"; then
   rm -f ${grub_cfg}.new
